@@ -21,6 +21,7 @@
  */
 
 #include <stdio.h>
+#include <string.h>
 
 #include "value.h"
 #include "object.h"
@@ -39,6 +40,20 @@ public:
 Value TestFunctionImp::call(ExecState *exec, Object &/*thisObj*/, const List &args)
 {
   fprintf(stderr,"--> %s\n",args[0].toString(exec).ascii());
+  return Undefined();
+}
+
+class VersionFunctionImp : public ObjectImp {
+public:
+  VersionFunctionImp() : ObjectImp() {}
+  virtual bool implementsCall() const { return true; }
+  virtual Value call(ExecState *exec, Object &thisObj, const List &args);
+};
+
+Value VersionFunctionImp::call(ExecState *exec, Object &/*thisObj*/, const List &args)
+{
+  // We need this function for compatibility with the Mozilla JS tests but for now
+  // we don't actually do any version-specific handling
   return Undefined();
 }
 
@@ -65,12 +80,16 @@ int main(int argc, char **argv)
     global.put(interp.globalExec(), Identifier("debug"), Object(new TestFunctionImp()));
     // add "print" for compatibility with the mozilla js shell
     global.put(interp.globalExec(), Identifier("print"), Object(new TestFunctionImp()));
+    // add "version" for compatibility with the mozilla js shell 
+    global.put(interp.globalExec(), Identifier("version"), Object(new VersionFunctionImp()));
 
     const int BufferSize = 200000;
     char code[BufferSize];
 
     for (int i = 1; i < argc; i++) {
       const char *file = argv[i];
+      if (strcmp(file, "-f") == 0)
+	continue;
       FILE *f = fopen(file, "r");
       if (!f) {
         fprintf(stderr, "Error opening %s.\n", file);
@@ -116,5 +135,5 @@ int main(int argc, char **argv)
 #ifdef KJS_DEBUG_MEM
   Interpreter::finalCheck();
 #endif
-  return ret ? 0 : 1;
+  return ret ? 0 : 3;
 }
